fix(zones): td text not aligned to the right
https://github.com/canonical/maas-ui/pull/5588#issuecomment-2606788437

--- a/src/app/zones/views/ZonesList/ZonesListTable/_index.scss
+++ b/src/app/zones/views/ZonesList/ZonesListTable/_index.scss
@@ -1,5 +1,5 @@
 .generic-table {
-  th:is(.machines, .devices, .controllers) {
+  th, td:is(.machines, .devices, .controllers) {
     text-align: right;
   }
 }
